--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.4.1",
     "date-fns": "^2.21.1",
     "gray-matter": "^4.0.3",
     "next": "10.2.0",
+    "next-mdx-remote": "^3.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
